--- a/package.json
+++ b/package.json
@@ -1,85 +1,13 @@
 {
-  "name": "jc-starter",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "taoql <taoql@gold-finance.com.cn>",
-  "private": true,
+  "name": "vue-cli-template-webpack",
+  "version": "2.0.0",
+  "license": "MIT",
+  "description": "A full-featured Webpack setup with hot-reload, lint-on-save, unit testing & css extraction.",
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "dll": "webpack --config build/webpack.dll.conf.js"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "fetch-jsonp": "^1.0.6",
-    "vue": "^2.2.2",
-    "vue-router": "^2.3.0",
-    "vuex": "^2.3.0",
-    "whatwg-fetch": "^2.0.3"
+    "docs": "cd docs && gitbook serve",
+    "docs:deploy": "bash ./deploy-docs.sh"
   },
   "devDependencies": {
-    "add-asset-html-webpack-plugin": "^1.0.2",
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "body-parser": "^1.17.1",
-    "chalk": "^1.1.3",
-    "chokidar": "^1.6.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "cookie-parser": "^1.4.3",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "cssnano": "^3.10.0",
-    "eslint": "^3.19.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.5.2",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
-    "postcss-advanced-variables": "^1.2.2",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-mixins": "^5.4.1",
-    "postcss-nested": "^1.0.1",
-    "postcss-nested-ancestors": "^1.0.0",
-    "postcss-sorting": "^2.0.1",
-    "postcss-sprites": "^4.2.1",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.3",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "vue-cli": "^2.8.1"
   }
 }
