--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jc-starter",
+  "name": "vue2-starter",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "taoql <taoql@gold-finance.com.cn>",
+  "author": "taoqili",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -23,8 +23,11 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.2.10",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
@@ -51,7 +54,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
@@ -64,7 +67,7 @@
     "postcss-sorting": "^2.0.1",
     "postcss-sprites": "^4.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^6.0.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.16.1",
