--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
-src/pages/routes.js
-src/components/routes.js
+template/src/pages/routes.js
+template/src/components/routes.js
 
