--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build": "cross-env NODE_ENV=prod node build/build.js",
+    "build:beta": "cross-env NODE_ENV=beta node build/build.js",
+    "build:dev": "cross-env NODE_ENV=dev node build/build.js",
     "dll": "webpack --config build/webpack.dll.conf.js"
   },
   "dependencies": {
@@ -38,6 +40,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
