--- a/template/package.json
+++ b/template/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "fetch-jsonp": "^1.0.6",
+    "nprogress": "^0.2.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
     "vuex": "^2.3.0",
