--- a/template/package.json
+++ b/template/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "cross-env NODE_ENV=prod node build/build.js",
-    "build:beta": "cross-env NODE_ENV=beta node build/build.js",
-    "build:dev": "cross-env NODE_ENV=dev node build/build.js",
+    "build": "cross-env NODE_ENV=production node build/build.js",
+    "build:test": "cross-env NODE_ENV=testing node build/build.js",
     "dll": "webpack --config build/webpack.dll.conf.js"
   },
   "dependencies": {
