--- a/template/package.json
+++ b/template/package.json
@@ -58,6 +58,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "mkdirp": "^0.5.1",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
