--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
-template/src/pages/routes.js
-template/src/components/routes.js
+**/routes.js
+**/children.js
 
