--- a/template/.gitignore
+++ b/template/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
-src/pages/routes.js
-src/components/routes.js
+**/routes.js
+**/children.js
+
 
