--- a/template/package.json
+++ b/template/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "element-ui": "^1.3.7",
     "fetch-jsonp": "^1.0.6",
     "js-cookie": "^2.1.4",
     "nprogress": "^0.2.0",
