by taoqili 新增sleep库，用于调试

--- a/template/package.json
+++ b/template/package.json
@@ -76,6 +76,7 @@
     "sass-loader": "^6.0.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sleep": "^5.1.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.1.4",
