--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-starter",
+  "name": "Vue2-Starter",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "taoqili",
