--- a/template/package.json
+++ b/template/package.json
@@ -12,15 +12,14 @@
     "dll": "webpack --config build/webpack.dll.conf.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "element-ui": "^1.3.7",
-    "fetch-jsonp": "^1.0.6",
     "js-cookie": "^2.1.4",
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vuex": "^2.3.0",
-    "whatwg-fetch": "^2.0.3"
+    "vuex": "^2.3.0"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^1.0.2",
