--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
-    "element-ui": "^1.3.7",
+    "element-ui": "^1.4.1",
     "js-cookie": "^2.1.4",
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
@@ -76,8 +76,8 @@
     "sass-loader": "^6.0.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sleep": "^5.1.1",
     "style-loader": "^0.16.1",
+    "system-sleep": "^1.3.5",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
