--- a/template/package.json
+++ b/template/package.json
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.23.0",
     "element-ui": "^1.4.1",
     "js-cookie": "^2.1.4",
+    "mint-ui": "^2.2.9",
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
