--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{name}}",
+  "name": "Vue2-Starter",
   "version": "1.0.0",
   "description": "{{description}}",
   "author": "{{author}}",
