--- a/template/package.json
+++ b/template/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^1.0.2",
+    "address": "^1.0.3",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
