里程碑 新增contants目录，集中管理api、menus等固定资源， 删除api目录，将api.js文件移动到contants目录

--- a/template/package.json
+++ b/template/package.json
@@ -5,10 +5,11 @@
   "author": "{{author}}",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "cross-env NODE_ENV=production node build/build.js",
+    "dev": "cross-env NODE_ENV=development node build/dev-server.js",
+    "start": "cross-env NODE_ENV=development node build/dev-server.js",
     "build:test": "cross-env NODE_ENV=testing node build/build.js",
+    "build:pre": "cross-env NODE_ENV=preview node build/build.js",
+    "build": "cross-env NODE_ENV=production node build/build.js",
     "dll": "webpack --config build/webpack.dll.conf.js"
   },
   "dependencies": {
