--- a/template/.gitignore
+++ b/template/.gitignore
@@ -5,7 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
-**/routes.js
+**/pages/routes.js
+**/components/routes.js
 **/children.js
 
 
