优化部分文件

--- a/template/package.json
+++ b/template/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development node build/dev-server.js",
     "start": "cross-env NODE_ENV=development node build/dev-server.js",
-    "build:test": "cross-env NODE_ENV=testing node build/build.js",
-    "build:pre": "cross-env NODE_ENV=preview node build/build.js",
+    "build:test": "cross-env NODE_ENV=test node build/build.js",
+    "build:pre": "cross-env NODE_ENV=pre node build/build.js",
     "build": "cross-env NODE_ENV=production node build/build.js",
     "dll": "webpack --config build/webpack.dll.conf.js"
   },
