引入flexible布局 去除sprites

--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -201,12 +201,12 @@
     "no-useless-escape": 0,
     "no-whitespace-before-property": 2,
     "no-with": 2,
-    "one-var": [
-      2,
-      {
-        "initialized": "never"
-      }
-    ],
+    // "one-var": [
+    //   2,
+    //   {
+    //     "initialized": "never"
+    //   }
+    // ],
     "operator-linebreak": [
       2,
       "after",
