--- a/template/package.json
+++ b/template/package.json
@@ -72,8 +72,8 @@
     "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.1",
     "postcss-nested-ancestors": "^1.0.0",
+    "postcss-px2rem-exclude": "^0.0.5",
     "postcss-sorting": "^2.0.1",
-    "postcss-sprites": "^4.2.1",
     "prerender-spa-plugin": "^2.0.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
