--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
-**/pages/routes.js
-**/components/routes.js
+**/router/routes-page.js
+**/router/routes-component.js
 **/children.js
 
